hphp/test/zend/bad/ext/mysql/tests/mysql_sql_safe_mode.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
$link = @mysql_connect("", "", "", true);
if ($link)
	die("skip Test cannot be run if annonymous connections are allowed");
?>